--- a/alternative.html
+++ b/alternative.html
@@ -80,7 +80,7 @@
                 <div class="alternative-content__left-panel">
                     <div class="alternative-content__anim-trigger"></div>
                     <div class="alternative-content__video-container">
-                        <video width="674" height="722" class="u-image-cover" loop playsinline autoplay muted preload="metadata" poster="https://bowberes.sirv.com/OneRiver/Left_60fps.mp4?thumbnail=674">
+                        <video width="674" height="722" class="u-image-cover u-video-cover" loop playsinline autoplay muted preload="metadata" poster="https://bowberes.sirv.com/OneRiver/Left_60fps.mp4?thumbnail=674">
                             <source src="https://bowberes.sirv.com/OneRiver/Left_60fps.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
