--- a/about.html
+++ b/about.html
@@ -117,10 +117,10 @@
                     <img src="./assets/images/about/investment-team/Ian-Gardiner,-CFA.jpg" alt="Our Team member"
                         class="u-image-cover">
                 </div>
-                <div class="about-banner__carousel-item">
+<!--                 <div class="about-banner__carousel-item">
                     <img src="./assets/images/about/investment-team/Chris-Lawn.jpg" alt="Our Team member"
                         class="u-image-cover">
-                </div>
+                </div> -->
                 <div class="about-banner__carousel-item">
                     <img src="./assets/images/about/investment-team/Yuying-Chen.jpg" alt="Our Team member"
                         class="u-image-cover">
